olvide poner una etiqueta

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         .background{
             min-height: 100%;
+            vertical-align: inherit;
         }
         .contenedor{
             border: 1px solid #999999ff;
@@ -51,7 +52,8 @@
     </style>
     <div class="container">
         <div class="row mt-5">
-            <div class="col-2">
+            <div class="col-2" style="display: flex; padding: 0;">
+                <span class="spacer"></span>
                 <img class="background" src="assets/icons/DBY-1.svg">
             </div>
             <div class="col-10" style="display: flex; padding: 0;">
