diseño web y diseño de celulares responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         }
         .background{
             min-height: 100%;
-            vertical-align: inherit;
         }
         .contenedor{
             border: 1px solid #999999ff;
@@ -28,17 +27,17 @@
             border-radius: 1rem;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
+            padding: .5rem;
             padding-left: .5rem;
-            padding-right: .5rem;
+        }
+        .contenedor div {
+            padding-top: 4px;
+        }
+        .contenedor div:first-child {
+            padding-top: 0;
         }
         .spacer {
             flex-grow: 1;
-        }
-        .ultimoElemento {
-            padding-bottom: .5rem;
-        }
-        .primerElemento {
-            padding-top: .5rem;
         }
         .a-transparente{
             color: transparent;
@@ -48,6 +47,24 @@
         }
         .a-transparente::selection{
             color: transparent;
+        }
+        .background-2{
+            min-width: 100%;
+        }
+        .contenedor-2{
+            border: 1px solid #999999ff;
+            border-top: none;
+            border-radius: 1rem;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+            padding: .5rem;
+            padding-top: .3rem;
+        }
+        .contenedor-2 a {
+            transform: rotate(90deg);
+        }
+        .contenedor-2 div{
+            padding-top: 4px;
         }
     </style>
     <div class="container">
@@ -238,6 +255,207 @@
             </div>
             
         </div>
+        <div class="row mt-5 mb-5">
+            <div class="col-12" style="display: flex;">
+                <div style="display: flex; padding: 0; flex-direction: column;">
+                    <div>
+                        <img class="background-2" src="assets/icons/DBY-1-rotated.svg">
+                    </div>
+                    <div class="contenedor-2">
+                        <div class="primerElemento">
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                        <div>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="a-transparente">
+                                a
+                            </a>
+                            <a class="butaca libre">
+                                <img src="assets/icons/butaca_disponible.svg">
+                            </a>
+                            <a class="butaca ocupada">
+                                <img src="assets/icons/butaca_vendida.svg">
+                            </a>
+                        </div>
+                    </div>
+                    <span class="spacer"></span>
+                </div>
+                <span class="spacer"></span>
+            </div>
+        </div>
+
     </div>
     
 </body>
