--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     </style>
     <div class="container">
         <div class="row mt-5">
-            <div class="col-2" style="display: flex; padding: 0;">
+            <div class="col-12" style="display: flex; padding: 0;">
                 <span class="spacer"></span>
-                <img class="background" src="assets/icons/DBY-1.svg">
-            </div>
-            <div class="col-10" style="display: flex; padding: 0;">
+                <div>
+                    <img class="background" src="assets/icons/DBY-1.svg">
+                </div>
                 <div class="contenedor">
                     <div class="primerElemento">
                         <a class="butaca libre">
@@ -253,10 +253,10 @@
                 </div>
                 <span class="spacer"></span>
             </div>
-            
         </div>
         <div class="row mt-5 mb-5">
             <div class="col-12" style="display: flex;">
+                <span class="spacer"></span>
                 <div style="display: flex; padding: 0; flex-direction: column;">
                     <div>
                         <img class="background-2" src="assets/icons/DBY-1-rotated.svg">
@@ -450,12 +450,10 @@
                             </a>
                         </div>
                     </div>
-                    <span class="spacer"></span>
                 </div>
                 <span class="spacer"></span>
             </div>
         </div>
-
     </div>
     
 </body>
